# aloca-vaga

./: #main.py#  .gitignore  main.py  pyproject.toml
alocvx/: TEST_COVERAGE_SUMMARY.md  conftest.py  debug_test.py
alocvx/engrenagems/: troca_vaga_contrato.py  vizinho_mais_distante.py
alocvx/engrenagens/: full_scan.py  permuta_vaga_aleatorio.py  vizinho_mais_distante.py
alocvx/entidades/: morador.py  vaga.py
alocvx/fabricas/: gera_troca_vaga.py  gerar_vaga.py  morador_vaga.py
alocvx/tests/: __init__.py  debug_factory_test.py
alocvx/tests/integration/: __init__.py  test_complete_system.py
alocvx/tests/unit/: __init__.py  test_gerar_vaga.py  test_morador.py  test_morador_vaga.py  test_vaga.py
alocvx/utilidades/: progressbar.py
